--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc -w"
+    "start": "tsc -w",
+    "preview": "cd build && serve ."
   },
   "bin": {
     "island": "bin/island.js"
@@ -13,16 +14,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
     "@types/node": "^18.11.7",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "rollup": "^3.2.3",
+    "serve": "^14.0.1",
     "typescript": "^4.8.4"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^2.2.0",
     "cac": "^6.7.14",
+    "fs-extra": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "vite": "^3.2.1"
+    "vite": "3.2.1"
   }
 }
