--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc -w",
-    "preview": "cd build && serve ."
+    "start": "tsup --watch",
+    "build": "tsup"
   },
   "bin": {
     "island": "bin/island.js"
@@ -18,8 +18,10 @@
     "@types/node": "^18.11.7",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "ora": "^6.3.1",
     "rollup": "^3.2.3",
-    "serve": "^14.0.1",
+    "serve": "^14.2.0",
+    "tsup": "^7.1.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
