--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "tsup --watch",
     "build": "tsup",
     "lint": "eslint --fix --ext .ts,.tsx,.js,.jsx --quiet ./",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test:init": "vitest run",
+    "prepare:e2e": "tsx scripts/prepare-e2e.ts",
+    "test:e2e": "playwright test"
   },
   "bin": {
     "island": "bin/island.js"
@@ -23,6 +26,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
+    "@playwright/test": "1.26.1",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^18.11.7",
     "@types/react": "^18.0.24",
@@ -33,13 +37,16 @@
     "eslint": "^8.44.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "execa": "5.1.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "ora": "^6.3.1",
     "rollup": "^3.2.3",
     "serve": "^14.2.0",
     "tsup": "^7.1.0",
-    "typescript": "^4.8.4"
+    "tsx": "^3.12.7",
+    "typescript": "^4.8.4",
+    "vitest": "^0.33.0"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^2.2.0",
@@ -47,7 +54,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "fs-extra": "^10.1.0",
-    "prettier": "^3.0.0",
+    "prettier": "2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite": "3.2.1"
