--- a/package.json
+++ b/package.json
@@ -1,62 +1,65 @@
 {
-  "name": "island-ssg",
+  "name": "island-dev",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsup --watch",
+    "dev": "tsup --watch",
     "build": "tsup",
-    "lint": "eslint --fix --ext .ts,.tsx,.js,.jsx --quiet ./",
+    "preview": "cd build && serve .",
+    "lint": "eslint --ext .ts,.tsx,.js,.jsx ./",
+    "lint:fix": "eslint --fix --ext .ts,.tsx,.js,.jsx --quiet ./",
     "prepare": "husky install",
-    "test:init": "vitest run",
-    "prepare:e2e": "tsx scripts/prepare-e2e.ts",
-    "test:e2e": "playwright test"
+    "test:unit": "vitest run",
+    "test:e2e": "playwright test",
+    "prepare:e2e": "tsx ./scripts/prepare-e2e.cts"
   },
   "bin": {
     "island": "bin/island.js"
   },
-  "lint-staged": {
-    "**/*.{js,jsx,tsx,ts}": [
-      "eslint --fix"
-    ]
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "lint-staged": {
+    "**/*.{js,jsx,tsx,ts}": [
+      "npm run lint"
+    ]
+  },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.6",
-    "@commitlint/config-conventional": "^17.6.6",
+    "@commitlint/cli": "^17.2.0",
+    "@commitlint/config-conventional": "^17.2.0",
     "@playwright/test": "1.26.1",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^18.11.7",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
-    "commitlint": "^17.6.6",
-    "eslint": "^8.44.0",
-    "eslint-plugin-react": "^7.32.2",
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "@vitest/ui": "^0.25.2",
+    "commitlint": "^17.2.0",
+    "eslint": "^8.27.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
     "execa": "5.1.1",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.3",
-    "ora": "^6.3.1",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
     "rollup": "^3.2.3",
-    "serve": "^14.2.0",
-    "tsup": "^7.1.0",
-    "tsx": "^3.12.7",
+    "serve": "^14.0.1",
+    "tsup": "^6.5.0",
+    "tsx": "^3.12.1",
     "typescript": "^4.8.4",
-    "vitest": "^0.33.0"
+    "vitest": "^0.25.2"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^2.2.0",
     "cac": "^6.7.14",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
     "fs-extra": "^10.1.0",
-    "prettier": "2.7.1",
+    "ora": "^6.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "vite": "3.2.1"
+    "vite": "^3.2.1"
   }
 }
